<resources>
    <string name="app_name">TripList</string>
    <string name="label_trip_none_planned">You have no planned trips</string>
    <string name="button_all_trips">Discover Trips</string>
    <string name="label_your_trips">Your Trips</string>
    <string name="label_all_trips">All Trips</string>
    <string name="label_no_trips_available">No Trips Available</string>
    <string name="transition_trip_image">detail_image</string>
    <string name="transition_trip_gradient">trip_gradient</string>
    <string name="transition_trip_title">trip_title</string>
    <string name="button_save">Save</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="transition_trip_sub_line">trip_sub_line</string>
    <string name="error_trip_start_after_end">Trip cannot start after it ends!</string>
    <string name="error_trip_end_before_start">Trip cannot end before it begins!</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete this trip?</string>
    <string name="detail_header_photos">Photos</string>
    <string name="detail_header_activities">Activities</string>
    <string-array name="user_trip_options">
        <item>Delete</item>
    </string-array>
</resources>
